@@ -1,5 +1,7 @@
 v0.7.2.2 BETA:
   * Extended NPC class
+  * Bugfix [LunaLua]: Fixed Camera.width and Camera.height
+  * Bugfix [LunaLua]: Fixed the bug, where the functions Blocks.get and Blocks.getInterseting don't includes the last block.
 
 v0.7.2.1 BETA:
   * Extended NPC class
